# SIGServer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  Makefile.dev  Makefile.in  Makefile.in_bak  Makefile_commonlib.mk  Makefile_controller.mk  Makefile_server.mk  Makefile_x3d.mk  README.md  config.h  config.h.in  config.status  configure  configure.ac  how-to-release.txt  release.sh  version.txt
docs/: index.html  (+6 more)
jar/: Makefile.am  Makefile.in
srcs/commonlib/: Attribute.cpp  Attribute.h  CMakeLists.txt  CParts.cpp  CParts.h  CommDataDecoder.cpp  CommDataDecoder.h  CommDataDef.h  CommDataEncoder.h  CommDataListener.h  CommDataResult.h  CommDataType.h  CommUtil.cpp  CommUtil.h  Command.h  CommandImpl.h  Controller.cpp  Controller.h  ControllerEvent.h  ControllerImpl.cpp  ControllerImpl.h  ControllerInf.h  JointForce.h  Logger.cpp  Logger.h  Makefile  MessageSender.h  Parts.cpp  Parts.h  PartsCmpnt.h  Parts_Binary.cpp  Position.h  RawSound.cpp  RawSound.h  RecvEvent.h  Rotation.cpp  Rotation.h  Service.h  SimObj.cpp  SimObj.h  (+23 more)
srcs/commonlib/comm/: Header.cpp  Header.h  Makefile
srcs/commonlib/comm/controller/: Action.cpp  Action.h  Collision.cpp  Controller.h  Makefile  NoData.h  RecvMessage.cpp  RecvMessage.h  RecvSound.cpp  RecvSound.h  RecvText.cpp  RecvText.h
srcs/commonlib/comm/data/: JointAngleData.h  JointQuaternionData.h  JointTorqueData.h  (+2 more)
srcs/commonlib/command/: JointControl.cpp  JointControl.h  Makefile  Move.cpp  Move.h  decode.cpp
srcs/commonlib/ct/: CTReader.cpp  CTReader.h  CTSimObj.cpp  CTSimObj.h  Makefile  NSLookup.cpp  NSLookup.h
srcs/commonlib/tests/: Makefile  SimObj.cpp  attach.cpp  attrs.cpp  cjoint.cpp  ctrl.cpp  decoder.cpp  decoder_entity.cpp  decoder_tools.cpp  getnames.cpp  jointforce.cpp  nameservice.cpp  ns.cpp  parts.cpp  rjoint.cpp  runner.cpp  soundrecog_req.cpp  soundrecog_res.cpp  testdef.h
srcs/julius-sp/: .gitignore  Jsp.cpp  Jsp.h  JspConfigFile.cpp  JspConfigFile.h  JspLog.cpp  JspLog.h  JspPacket.cpp  JspPacket.h  JspRecog.cpp  JspRecog.h  JspSocket.cpp  JspSocket.h  JspStringUtil.cpp  JspStringUtil.h  JspTestClient.cpp  JspTestClient.h  JspWave.cpp  JspWave.h  JspXMLParser.cpp  JspXMLParser.h  Makefile.am  Makefile.dev  Makefile.in  fast.jconf  jspTest.cpp  julius_sp.cpp  julius_sp.h  recogTest.cpp  sigjsp.conf.in  sigjsp.sh.in  xstr.h
srcs/julius-sp/.deps/: Jsp.Po  JspConfigFile.Po  JspLog.Po  JspPacket.Po  JspRecog.Po  JspSocket.Po  JspStringUtil.Po  JspWave.Po  JspXMLParser.Po  julius_sp.Po
srcs/julius-sp/commonlib/: CommDataDef.h  CommUtil.cpp  Command.h  Logger.h  Parts.h  Text.h  Thread.h  ThreadWin.h  Value.h  X3DDB.h
srcs/model/: .gitignore  CMakeLists.txt  ControllerLib.cpp  ControllerLib.h  Makefile.am  Makefile.dev  Makefile.in  make.nmake  mkdll.nmake  runmain.cpp  sendmsg.cpp  sigend.cpp  siggenac.in  sigmake.bat  sigmake.bat.in  sigsendmsg  sigstart.cpp  vc11.bat  wingetopt.cpp  wingetopt.h
srcs/model/.deps/: ControllerLib.Po  runmain.Po  sigend.Po  sigstart.Po
srcs/model/commonlib/: CParts.h  CUtils.cpp  CommDataDecoder.h  Controller.cpp  Controller.h  ControllerInf.h  Makefile  MessageSender.h  Position.h  RawSound.cpp  Rotation.cpp  Service.h  SimObj.cpp  SimObj.h  SimWorld.cpp  Vector3d.h  ViewImageInfo.h  pthread_dep.h  wingetopt.c  wingetopt.h
srcs/model/include/: JointForce.h  Makefile.am  Makefile.in  Parts.h  RecvEvent.h  SimObjBase.h  Text.h  Vector3d.h  ViewImage.h  systemdef.h
srcs/model/samples/: Arm.cpp  CallBackText.cpp  Capture.cpp  GoRound.cpp  Gravity.cpp  JointTest.cpp  Makefile  MovingArm.cpp  NiiManOkonomi.cpp  Robot.cpp  SetJointAngle.cpp  SetPosition.cpp  SetTorque.cpp  Watcher.cpp  onAction.cpp  onRecvMsg.cpp  scDetectEntities.cpp  scMove.cpp  scSetAttr.cpp  scTV_blink.cpp
srcs/sigverse/controller/: ControllerLib.cpp  ControllerLib.h  Makefile.am  mkdll.nmake  mkdll.nmake.in  runmain.cpp  sendmsg.cpp
srcs/simserver/: CMakeLists.txt  CUtils.cpp  Command_JointControl.cpp  Command_Move.cpp  DecoderListener.cpp  DecoderListener.h  Joint.cpp  Joint.h  Locker.h  LogTransfer.cpp  LogTransfer.h  Makefile.am  Makefile.base  Makefile.glview  ODEObj.h  ODEWorld.cpp  ODEWorld.h  PacketForward.cpp  PacketForward.h  SParts.cpp  SParts.h  SSimEntity.cpp  SSimEntity.h  SSimObj.cpp  SSimObj.h  SSimWorld.cpp  SSimWorld.h  ServerAcceptProc.cpp  ServerAcceptProc.h  ServiceNameServer.cpp  ServiceNameServer.h  SimGround.cpp  SimGround.h  SimViewPoint.cpp  SimViewPoint.h  SimWorldProvider.h  WorldSimulator.cpp  WorldSimulator.h  X3DParser.cfg  fname.c  (+10 more)
srcs/simserver/conf/: A1_air_cleaner.x3d  A1_air_cleaner.xml  A1_apple_plate.xml  A1_armchair.x3d  A1_armchair.xml  A1_art_deco1.xml  A1_art_deco2.xml  A1_art_deco3.xml  A1_art_deco4.xml  A1_chairs.x3d  A1_chairs.xml  A1_curtains.x3d  A1_curtains.xml  A1_cushion.x3d  A1_cushion.xml  A1_dinner_ready.xml  A1_dipper.x3d  A1_dipper.xml  A1_door.xml  A1_eacon.xml  A1_fridge.xml  A1_frying_pan.xml  A1_gas_cooker.xml  A1_kitchen.xml  A1_kitchen_sink.x3d  A1_kitchen_sink.xml  A1_kitchen_table.x3d  A1_kitchen_table.xml  A1_lantern.x3d  A1_lantern.xml  A1_leafless_plant.x3d  A1_leafless_plant.xml  A1_low_cupboard.x3d  A1_low_cupboard.xml  A1_low_table.x3d  A1_low_table.xml  A1_magazines.xml  A1_magnetoscope.x3d  A1_magnetoscope.xml  A1_old_lamp.x3d  (+110 more)
srcs/simserver/readconf/: BodyFactory.h  BodyXMLReader.cpp  BodyXMLReader.h  EntityXMLReader.cpp  EntityXMLReader.h  Eval.cpp  Eval.h  FilenameDB.cpp  FilenameDB.h  GeometryParser.cpp  GeometryParser.h  JointParser.cpp  JointParser.h  Makefile  ParserDump.h  ReadTask.h  SSimObjBuilder.cpp  SSimObjBuilder.h  SegmentParser.cpp  SegmentParser.h  SgvX3DSimObjCreator.cpp  SgvX3DSimObjCreator.h  ShapeFileReader.cpp  ShapeFileReader.h  SimpleShapeXMLReader.cpp  SimpleShapeXMLReader.h  Transform.h  TransformStack.cpp  TransformStack.h  WorldXMLReader.cpp  WorldXMLReader.h  X3DFileReader.cpp  X3DFileReader.h  XMLUtils.cpp  infix2postfix.cpp  infix2postfix.h  rpnCalc.cpp
srcs/simserver/testsrc/: CommDataEncoderTest.cpp  WorldXMLReaderTest.cpp  testclient.c  testview.cpp  xmltest.cpp
srcs/x3d/: CMakeLists.txt
(+3411 files in other folders)
