# $Id: Makefile.am,v 1.1.1.1 2011-03-25 02:18:52 okamoto Exp $
jar_DATA = FastInfoset.jar X3DParser.jar aviatrix3d-all.jar dis.jar disxml.jar dxinput.jar geoapi.jar gnu-regexp-1.0.8.jar gt2-main.jar httpclient.jar j3d-org.jar jinput.jar joal.jar jogl.jar js.jar jutils.jar log4j.jar odejava.jar smack.jar smackx-debug.jar smackx.jar units-0.01.jar uri.jar vecmath.jar vlc_uri.jar xj3d-all.jar xj3d-cefx3d.jar xj3d-common.jar xj3d-config.jar xj3d-core.jar xj3d-eai.jar xj3d-ecmascript.jar xj3d-external-sai.jar xj3d-images.jar xj3d-j3d.jar xj3d-java-sai.jar xj3d-jaxp.jar xj3d-jsai.jar xj3d-net.jar xj3d-norender.jar xj3d-ogl.jar xj3d-parser.jar xj3d-render.jar xj3d-runtime.jar xj3d-sai.jar xj3d-sav.jar xj3d-script-base.jar xj3d-xml-util.jar xj3d-xml.jar 