# $Id: Makefile.am,v 1.1.1.1 2011-03-25 02:18:46 okamoto Exp $

nobase_siginclude_HEADERS = Encode.h SimObj.h Rotation.h ControllerEvent.h Controller.h Parts.h CParts.h Vector3d.h ViewImageInfo.h ViewImage.h systemdef.h modelerr.h Logger.h Position.h Size.h ControllerImpl.h Value.h SimObjBase.h SimObjBaseAttrs.h ControllerInf.h Text.h \
	RecvEvent.h \
	RawSound.h \
	JointForce.h \
	Attribute.h \
	comm/controller/Action.h \
	comm/controller/Controller.h \
	comm/controller/NoData.h \
	comm/controller/RecvMessage.h \
	comm/controller/RecvSound.h \
	comm/controller/RecvText.h \
	comm/controller/Collision.h